<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/regensburg_menu"
            android:title="@string/uni_regensburg"
            android:checked="true"
            android:icon="@drawable/ic_uni"/>

        <item
            android:id="@+id/pt_menu"
            android:title="@string/pt_cafete"
            android:checked="true"
            android:icon="@drawable/ic_uni"/>

        <item
            android:id="@+id/menu_chemie"
            android:title="@string/chemie_cafete"
            android:checked="true"
            android:icon="@drawable/ic_uni"/>

        <item
            android:id="@+id/oth_menu"
            android:title="@string/oth_regensburg"
            android:checked="true"
            android:icon="@drawable/ic_uni"/>

        <item
            android:id="@+id/passau_menu"
            android:title="@string/uni_passau"
            android:checked="true"
            android:icon="@drawable/ic_uni"/>

        <item
            android:id="@+id/menu_landshut"
            android:title="@string/uni_landshut"
            android:checked="true"
            android:icon="@drawable/ic_uni"/>

        <item
            android:id="@+id/menu_deggendorf"
            android:title="@string/th_deggendorf"
            android:checked="true"
            android:icon="@drawable/ic_uni"/>

        <item
            android:id="@+id/menu_straubing"
            android:title="@string/tum_straubing"
            android:checked="true"
            android:icon="@drawable/ic_uni"/>

        <item
            android:id="@+id/menu_pfarrkirchen"
            android:title="@string/thd_pfarrkirchen"
            android:checked="true"
            android:icon="@drawable/ic_uni"/>

    </group>

</menu>