<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <!--
    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
        -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_text"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="32sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tab_layout_weekdays"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout_weekdays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/header">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_label_monday" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_label_tuesday" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_label_wednesday" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_label_thurdsay" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_label_friday" />

        </com.google.android.material.tabs.TabLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/view_current_menu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout_weekdays"
            app:layout_constraintBottom_toTopOf="@+id/text_content_description"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


        <TextView
            android:id="@+id/text_content_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/app_description"
            android:textSize="14sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif-black"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_drawer" />



</androidx.drawerlayout.widget.DrawerLayout>